unpackaged/main/default/objects/enerjyhubsetting__c/enerjyhubsetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide defaults for enerjyhub sales</description>
    <label>enerjyhub setting</label>
</CustomObject>