unpackaged/main/default/objects/enerjyhubsetting__c/fields/enerjyhub_Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>enerjyhub_Contract_Record_Type__c</fullName>
    <description>This field is used to share the record type ID for contracts so it can be referenced in a process builder.</description>
    <inlineHelpText>This field is used to share the record type ID for contracts so it can be referenced in a process builder.</inlineHelpText>
    <label>enerjyhub Contract Record Type</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>