unpackaged/main/default/objects/enerjyhubsetting__c/fields/enerjyhub_one_time_discount_product_ID__c.field-meta.xml
<CustomField>
    <fullName>enerjyhub_one_time_discount_product_ID__c</fullName>
    <description>This field is populated with the ID of the one-time discount product in order not to create an asset for it via flow.</description>
    <inlineHelpText>This field is populated with the ID of the one-time discount product in order not to create an asset for it via flow.</inlineHelpText>
    <label>enerjyhub one time discount product ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>