unpackaged/main/default/objects/enerjyhubsetting__c/fields/enerjyhub_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>enerjyhub_Price_Book__c</fullName>
    <description>This is for the price book ID so that we can reference in process builder.</description>
    <inlineHelpText>This is for the price book ID so that we can reference in process builder.</inlineHelpText>
    <label>enerjyhub Price Book</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>